--- a/image-slider/src/index.css
+++ b/image-slider/src/index.css
@@ -3,20 +3,6 @@
   padding: 0;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
 /* text */
 .uppercase {
   text-transform: uppercase;
@@ -45,10 +31,15 @@ button:hover {
 }
 
 /* color & bg-colors */
-.bg-grey {
+.bg-light-grey {
   background-color: rgb(204, 200, 200);
 }
-
+.bg-white {
+  background-color: #fff;
+}
+.bg-grey {
+  background-color: grey;
+}
 /* position */
 .relative {
   position: relative;
@@ -89,4 +80,17 @@ img {
 }
 .hide-current-image {
   display: none;
+}
+.dot-circle {
+  height: 10px;
+  width: 10px;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+  margin: 2px;
+  cursor: pointer;
+}
+.dot-container {
+  position: relative;
+  top: -3.5rem;
 }
